@@ -1034,29 +1034,31 @@ cmd_addzone ()
 	/* check that zonelist.xml.backup is writable */
 	StrAppend(&backup_filename, zonelist_filename);
 	StrAppend(&backup_filename, ".backup");
-	if (access(backup_filename, F_OK) == 0){
-		if (access(backup_filename, W_OK)){
-			printf("ERROR: The backup file %s can not be written.\n",backup_filename);
-			StrFree(zonelist_filename);
-			StrFree(sig_conf_name);
-			StrFree(input_name);
-			StrFree(output_name);
-			StrFree(input_type);
-			StrFree(output_type);
-			StrFree(backup_filename);
-			return(1);
-		}
-	}else{
-		if (access(OPENDNSSEC_CONFIG_DIR, W_OK)){
-			printf("ERROR: The backup file %s can not be written.\n",backup_filename);
-			StrFree(zonelist_filename);
-			StrFree(sig_conf_name);
-			StrFree(input_name);
-			StrFree(output_name);
-			StrFree(input_type);
-			StrFree(output_type);
-			StrFree(backup_filename);
-			return(1);
+    if (xml_flag == 1) {
+		if (access(backup_filename, F_OK) == 0){
+			if (access(backup_filename, W_OK)){
+				printf("ERROR: The backup file %s can not be written.\n",backup_filename);
+				StrFree(zonelist_filename);
+				StrFree(sig_conf_name);
+				StrFree(input_name);
+				StrFree(output_name);
+				StrFree(input_type);
+				StrFree(output_type);
+				StrFree(backup_filename);
+				return(1);
+			}
+		}else{
+			if (access(OPENDNSSEC_CONFIG_DIR, W_OK)){
+				printf("ERROR: The backup file %s can not be written.\n",backup_filename);
+				StrFree(zonelist_filename);
+				StrFree(sig_conf_name);
+				StrFree(input_name);
+				StrFree(output_name);
+				StrFree(input_type);
+				StrFree(output_type);
+				StrFree(backup_filename);
+				return(1);
+			}
 		}
 	}
 	/*
@@ -1182,7 +1184,7 @@ cmd_addzone ()
         StrFree(output_type);
 
         if (doc == NULL) {
-            printf("Couldn't add our new node in memory\n");
+            printf("Error: Couldn't add our new node in memory\n");
             StrFree(zonelist_filename);
 			StrFree(backup_filename);
             return(1);
@@ -1191,12 +1193,11 @@ cmd_addzone ()
         /* Backup the current zonelist */
         status = backup_file(zonelist_filename, backup_filename);
         if (status != 0) {
-            printf("Backup %s FAILED, please backup %s manually and run \"ods-ksmutil zonelist export\" to update zonelist.xml\n", backup_filename, backup_filename);
+            printf("Error: Backup %s FAILED, please backup %s manually and run \"ods-ksmutil zonelist export\" to update zonelist.xml\n", backup_filename, backup_filename);
             StrFree(zonelist_filename);
 			StrFree(backup_filename);
             return(status);
         }
-        StrFree(backup_filename);
 
         /* Save our new one over, TODO should we validate it first? */
         status = xmlSaveFormatFile(zonelist_filename, doc, 1);
@@ -1204,7 +1205,8 @@ cmd_addzone ()
         xmlFreeDoc(doc);
 
         if (status == -1) {
-            printf("couldn't save zonelist, please run \"ods-ksmutil zonelist export\" to update zonelist.xml\n");
+            printf("Error: couldn't save zonelist, please run \"ods-ksmutil zonelist export\" to update zonelist.xml\n");
+			StrFree(backup_filename);
             return(1);
         }
     }
@@ -1218,6 +1220,7 @@ cmd_addzone ()
         printf("Imported zone: %s\n", o_zone);
     }
 
+    StrFree(backup_filename);
 	StrFree(sig_conf_name);
 	StrFree(input_name);
 	StrFree(output_name);
